# finargy

./: .gitignore  README.md  extract_ratios.py  portfolio_yield.ipynb  requirements.txt  setup.cfg  setup.py  visual_analysis.py
src/finargy/api/: account_data.py  client.py
src/finargy/api/market_data/: custom_symbols.py  investment_fund_data.py  simplified_market_data.py  symbol_data.py
src/finargy/api/market_data/models/: symbol_data_models.py
src/finargy/data_processing/: utils.py
src/finargy/portfolio/: portfolio.py  portfolio_reconstruction.py
src/finargy/portfolio/analysis/: analysis.py  mep.py
